# connectorlib-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.sql  datastore.json  definitions.py  docker-compose.yml  handlers.py  main.py  requirements.txt  reset.py  serverid.py  setup.py  test.py
config/: setup.sql
messages/: auth.py  base.py  chunk.py  data.py  player.py
src/: db.py  handlers.py  handlers.rs  main.py  main.rs  session.rs  utils.py  utils.rs  websocket.py
src/config/: setup.sql
src/messages/: ChatData.py  ChatData.rs  ChunkEvent.py  ClientAttributes.rs  ClientChat.rs  ClientChunk.rs  ClientInventory.rs  ClientPosition.rs  IdentityChallenge.rs  IdentityEvent.py  IdentityRequest.rs  NetworkData.py  NetworkData.rs  PlayerArmor.py  PlayerBreath.py  PlayerEffects.py  PlayerExperience.py  PlayerFPS.py  PlayerGamemode.py  PlayerHealth.py  PlayerHotbar.py  PlayerHunger.py  PlayerJoin.py  PlayerJoin.rs  PlayerMovement.py  PlayerPing.py  PlayerQuit.py  PlayerQuit.rs  PlayerRespawn.py  PlayerRespawn.rs  PositionData.py  SystemChatData.py  auth.py  base.py  chunk.py  data.py  mod.rs  player.py
src_old/: main.py
src_old/messages/: auth.py  data.py
