[package]
name = "connectorlib-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
futures-util = "0.3.31"
libaes = "0.7.0"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.17.0", features = ["fast-rng", "serde", "v4"] }
