[package]
name = "connectorlib-server"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
base16ct = { version = "0.2.0", features = ["std"] }
futures-util = "0.3.31"
governor = "0.10.0"
libaes = "0.7.0"
paris = { version = "1.5.15", features = ["timestamps", "macros", "no_logger"] }
reqwest = { version = "0.12.22", features = ["json"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["runtime", "with-serde_json-1", "with-uuid-1", "with-time-0_3"] }
tokio-tungstenite = "0.27.0"
uuid = { version = "1.17.0", features = ["fast-rng", "serde", "v4"] }
